# FreeRTOS-FAT-CLI-for-RPi-Pico

src/FreeRTOS+FAT+CLI/: CMakeLists.txt
src/FreeRTOS+FAT+CLI/src/: FreeRTOS_time.c
